# Final_Assigment-main

./: .gitignore  NOTES.md  README.md  empty_message.sh  run_camera.sh  run_colcon.sh  run_controller.sh  run_detector.sh  run_full_mission.sh  run_mission.sh  run_setup.sh  run_sim.sh  run_traj.sh
controller_pkg_custom/: CMakeLists.txt  package.xml
controller_pkg_custom/launch/: controller.launch.py
controller_pkg_custom/src/: controller_node.cpp
custom_controller_pkg/src/: controller_node.cpp
ros2_ws/: frames_2026-01-29_16.45.45.gv  lantern_detections.txt  log.txt
ros2_ws/src/FSM/: CMakeLists.txt  package.xml
ros2_ws/src/FSM/include/control/: mission_fsm_node.hpp
ros2_ws/src/FSM/launch/: fsm.launch.py
ros2_ws/src/FSM/src/: mission_fsm_main.cpp  mission_fsm_node.cpp
ros2_ws/src/FSM/test/: README.md  mission_fsm_node_test.cpp
ros2_ws/src/basic_waypoint_pkg/config/: trajectory_config.yaml
ros2_ws/src/basic_waypoint_pkg/launch/: waypoint_mission.launch.py
ros2_ws/src/basic_waypoint_pkg/src/: planner.cc  planner_node.cc
ros2_ws/src/camera_recorder_pkg/: package.xml  setup.py
ros2_ws/src/camera_recorder_pkg/camera_recorder_pkg/: camera_recorder_node.py
ros2_ws/src/control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/control/basic_waypoint_pkg/config/: trajectory_config.yaml
ros2_ws/src/control/basic_waypoint_pkg/src/: planner.cc  planner_node.cc
ros2_ws/src/control/include/control/: mission_fsm_node.hpp
ros2_ws/src/control/launch/: fsm.launch.py
ros2_ws/src/control/src/: mission_fsm_main.cpp  mission_fsm_node.cpp
ros2_ws/src/control/test/: README.md  mission_fsm_node_test.cpp
ros2_ws/src/exploring/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/exploring/include/exploring/: exploration_manager.hpp
ros2_ws/src/exploring/include/planning/: exploration_manager.hpp
ros2_ws/src/exploring/launch/: exploration_demo.launch.py
ros2_ws/src/exploring/rviz/: exploration_demo.rviz
ros2_ws/src/exploring/scripts/: mock_drone_tf.py
ros2_ws/src/exploring/src/: exploration_manager.cpp
ros2_ws/src/exploring/srv/: GetExplorationGoal.srv
ros2_ws/src/exploring/test/: exploration_manager_test.cpp
ros2_ws/src/fsm/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/fsm/include/fsm/: mission_fsm_node.hpp
ros2_ws/src/fsm/launch/: mission.launch.py
ros2_ws/src/fsm/rviz/: mission.rviz
ros2_ws/src/fsm/src/: mission_fsm_node.cpp
ros2_ws/src/fsm/test/: README.md  mission_fsm_node_test.cpp
ros2_ws/src/lantern_detector_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/lantern_detector_pkg/lantern_detector_pkg/: lantern_detector_node.py
ros2_ws/src/lantern_detector_pkg/launch/: lantern_detector.launch.py
ros2_ws/src/lantern_detector_pkg/resource/: lantern_detector_pkg
ros2_ws/src/mapping_pkg/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/mapping_pkg/include/mapping_pkg/: mapping_utils.hpp
ros2_ws/src/mapping_pkg/launch/: mapping.launch.py
ros2_ws/src/mapping_pkg/mapping_pkg/: mapping_node.py
ros2_ws/src/mapping_pkg/resource/: mapping_pkg
ros2_ws/src/mapping_pkg/src/: cloud_gate_node.cpp
ros2_ws/src/perception/: CMakeLists.txt  package.xml
ros2_ws/src/perception/lantern_detector_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/perception/lantern_detector_pkg/lantern_detector_pkg/: lantern_detector_logger_node.py  lantern_detector_node.py
ros2_ws/src/perception/lantern_detector_pkg/launch/: lantern_detector.launch.py
ros2_ws/src/perception/lantern_detector_pkg/src/: lantern_detection_logger_node.cpp  lantern_detector_node.cpp
ros2_ws/src/perception/launch/: lantern_detector.launch.py  pointcloud_transformer.launch.py
ros2_ws/src/perception/src/: lantern_marker_node.cpp  pointcloud_transformer.cpp
ros2_ws/src/perception_fusion_pkg/: package.xml
ros2_ws/src/perception_fusion_pkg/perception_fusion_pkg/: lantern_fusion_node.py
ros2_ws/src/perception_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/planning/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/planning/include/planning/: exploration_manager.hpp
ros2_ws/src/planning/launch/: exploration_demo.launch.py
ros2_ws/src/planning/scripts/: mock_drone_tf.py  mock_map_publisher.py
ros2_ws/src/planning/src/: exploration_manager.cpp  exploration_manager_main.cpp  global_planner_node.cpp  global_planner_node_a.cpp
ros2_ws/src/planning/test/: exploration_manager_test.cpp
ros2_ws/src/simulation/: CMakeLists.txt
ros2_ws/src/trajectory_generation/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_generation/config/: trajectory_config.yaml
ros2_ws/src/trajectory_generation/include/trajectory_generation/: planner.hpp
ros2_ws/src/trajectory_generation/scripts/: publish_waypoints_path.py
ros2_ws/src/trajectory_generation/src/: planner.cc  trajectory_generation_node.cpp
ros2_ws/src/unity_sim/: Simulation.x86_64:Zone.Identifier
ros2_ws_aleja/: lantern_detections.txt  log.txt
ros2_ws_aleja/src/exploring/: README.md
ros2_ws_aleja/src/planning/: CMakeLists.txt
ros2_ws_aleja/src/trajectory_generation/: package.xml
ros2_ws_controller/src/controller_pkg/: CMakeLists.txt  package.xml
ros2_ws_controller/src/unity_bridge/: CMakeLists.txt  package.xml
ros2_ws_controller/src/unity_bridge/launch/: unity_sim.launch.py
ros2_ws_controller/src/unity_bridge/src/: traj_publisher.cpp
ros2_ws_main/: lantern_detections.txt
ros2_ws_main/src/exploring/: README.md
ros2_ws_main/src/fsm/: CMakeLists.txt
ros2_ws_main/src/planning/: package.xml
ros2_ws_main/src/planning/src/: global_planner_node.cpp
ros2_ws_main/src/simulation/: CMakeLists.txt
ros2_ws_old/src/camera_recorder_pkg/: package.xml  setup.cfg
ros2_ws_old/src/lantern_detector_pkg/: setup.cfg  setup.py
ros2_ws_old/src/mapping_pkg/: CMakeLists.txt
ros2_ws_old/src/mapping_pkg/mapping_pkg/: __init__.py
ros2_ws_old/src/perception_fusion_pkg/: setup.cfg  setup.py
ros2_ws_salah/src/exploring/: package.xml
ros2_ws_trajectory_gen/src/unity_bridge/: CMakeLists.txt
ros2_ws_trajectory_gen/src/unity_bridge/tcpimage/: CMakeLists.txt
(+58 files in other folders)
