cmake_minimum_required(VERSION 3.8)
project(mapping_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)

# Cloud gate node
add_executable(cloud_gate src/cloud_gate_node.cpp)
ament_target_dependencies(cloud_gate rclcpp sensor_msgs std_msgs)

install(TARGETS cloud_gate
  DESTINATION lib/${PROJECT_NAME}
)

# Install the Launch Directory
install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
